--- a/Partials/Header.cshtml
+++ b/Partials/Header.cshtml
@@ -1,28 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet" />
-  </head>
-  <body>
-      <!-- Header -->
-    <header class="bg-white shadow">
-        <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
-            <!-- Logo -->
-            <div class="flex items-center">
-                <img src="~/Image/Paucek and Lage.png" alt="Car rental logo" style="width: 200px; height: 200px;">
-               
-            </div>
-            <!-- Menu -->
-            <nav class="flex space-x-6">
-                <a href="#" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Về chúng tôi</a>
-                <a href="#" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Trở thành đối tác</a>
-                <a href="#" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Đăng ký</a>
-                <a href="#" class="text-gray-600 border text-lg p-2 font-semibold rounded border-black  hover:text-black ">Đăng nhập</a>
-            </nav>
-        </div>
-    </header>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Header -->
+  <header class="bg-white shadow">
+    <div class="max-w-7xl mx-auto px-4 py-6 flex justify-between items-center">
+      <!-- Logo -->
+      <div class="flex items-center">
+        <a href="/">
+          <img src="~/Image/Paucek and Lage.png" alt="Car rental logo" style="width: 200px; height: 200px;">
+        </a>
+      </div>
+      <!-- Menu -->
+      <nav class="flex space-x-6">
+        <a href="/lookup" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Về chúng tôi</a>
+        <a href="#" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Trở thành đối tác</a>
+        <a href="/register" class="text-gray-600 p-2 text-lg font-semibold hover:text-black">Đăng ký</a>
+        <a href="/login"
+          class="text-gray-600 border text-lg p-2 font-semibold rounded border-black  hover:text-black ">Đăng nhập</a>
+      </nav>
+    </div>
+  </header>
+
+</body>
+
 </html>
