--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -400,28 +400,26 @@
 <div class="mt-6">
   <p class="text-3xl font-semibold p-6 pl-20">Lợi ích của Car rental</p>
   <div class="flex flex-col items-center mt-auto p-5">
-    <div class="flex flex-wrap gap-10 justify-center">
-      <div class="flex flex-wrap gap-10 justify-center p-5">
-        <div class="flex items-start gap-6 w-full md:w-1/3">
-          <img src="https://chungxe.vn/assets/images/icon/icon1.png" style="width: 100px;" alt="">
-          <div class="mt-2">
-            <h1 class="text-lg font-semibold">Nhiều lựa chọn</h1>
-            <p class="text-gray-600 text-lg">Hàng trăm loại xe đa dạng ở nhiều địa điểm trên cả nước, phù hợp với mọi
-              mục
-              đích của bạn</p>
-          </div>
+    <div class="flex flex-wrap gap-30 justify-center p-5 w-full">
+      <div class="flex items-start gap-6 w-full md:w-1/3">
+        <img src="https://chungxe.vn/assets/images/icon/icon1.png" style="width: 100px;" alt="">
+        <div class="mt-2">
+          <h1 class="text-lg font-semibold">Nhiều lựa chọn</h1>
+          <p class="text-gray-600 text-lg">Hàng trăm loại xe đa dạng ở nhiều địa điểm trên cả nước, phù hợp với mọi
+            mục
+            đích của bạn</p>
         </div>
+      </div>
 
-        <div class="flex items-start gap-6 w-full md:w-1/3">
-          <img src="https://chungxe.vn/assets/images/icon/icon2.png" style="width: 80px;" alt="">
-          <div class="mt-2">
-            <h1 class="text-lg font-semibold">Thuận tiện</h1>
-            <p class="text-gray-600 text-lg">Dễ dàng tìm kiếm, so sánh và đặt chiếc xe như ý với chỉ vài click chuột</p>
-          </div>
+      <div class="flex items-start gap-6 w-full md:w-1/3">
+        <img src="https://chungxe.vn/assets/images/icon/icon2.png" style="width: 80px;" alt="">
+        <div class="mt-2">
+          <h1 class="text-lg font-semibold">Thuận tiện</h1>
+          <p class="text-gray-600 text-lg">Dễ dàng tìm kiếm, so sánh và đặt chiếc xe như ý với chỉ vài click chuột</p>
         </div>
       </div>
     </div>
-    <div class="flex flex-wrap gap-10 justify-center p-5">
+    <div class="flex flex-wrap gap-30 justify-center p-5 w-full">
       <div class="flex items-start gap-6 w-full md:w-1/3">
         <img src="https://chungxe.vn/assets/images/icon/icon3.png" style="width: 100px;" alt="">
         <div class="mt-2">
@@ -439,7 +437,7 @@
         </div>
       </div>
     </div>
-    <div class="flex flex-wrap gap-10 justify-center p-5">
+    <div class="flex flex-wrap gap-30 justify-center p-5 w-full">
       <div class="flex items-start gap-6 w-full md:w-1/3">
         <img src="https://chungxe.vn/assets/images/icon/icon5.png" style="width: 100px;" alt="">
         <div class="mt-2">
@@ -447,7 +445,6 @@
           <p class="text-gray-600 text-lg">Có nhân viên hỗ trợ khách hàng trong suốt quá trình thuê xe</p>
         </div>
       </div>
-      <br>
       <div class="flex items-start gap-6 w-full md:w-1/3">
         <img src="https://chungxe.vn/assets/images/icon/insurance.png" style="width: 120px;" alt="">
         <div class="mt-2">
@@ -457,6 +454,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 </div>
 <div class="bg-gray-100">
