--- a/Views/Home/Partners.cshtml
+++ b/Views/Home/Partners.cshtml
@@ -99,7 +99,7 @@
         <!-- Box 1 -->
         <div class="p-6 border-2 rounded-md border-teal-700">
             <div class="flex justify-center mb-4">
-                <img src="https://chungxe.vn/assets/images/icon/icon1-slide.png" alt="Icon 1">
+                <img style="width: 150px;" src="https://chungxe.vn/assets/images/icon/icon1-slide.png" alt="Icon 1">
             </div>
             <p class="text-gray-700">Car rental có thế mạnh về tập khách hàng du lịch và là công tác đến từ Hà Nội và TP
                 Hồ Chí Minh và các địa điểm du lịch trong cả nước (Nha Trang, Phú Quốc, Đà Nẵng, Hội An…) cùng như tập
@@ -108,7 +108,7 @@
         <!-- Box 2 -->
         <div class="p-6 border-2 rounded-md border-teal-700">
             <div class="flex justify-center mb-4">
-                <img src="https://chungxe.vn/assets/images/icon/icon2-slide.png" alt="Icon 2">
+                <img style="width: 150px;" src="https://chungxe.vn/assets/images/icon/icon2-slide.png" alt="Icon 2">
             </div>
             <p class="text-gray-700">Car rental sẽ đóng vai trò một đại lý cung cấp khách đến từ kênh trực tuyến cho đơn
                 vị thuê xe để bổ sung kênh bán hàng hiện tại.</p>
@@ -116,7 +116,7 @@
         <!-- Box 3 -->
         <div class="p-6 border-2 rounded-md border-teal-700">
             <div class="flex justify-center mb-4">
-                <img src="https://chungxe.vn/assets/images/icon/icon3-slide.png" alt="Icon 3">
+                <img style="width: 150px;" src="https://chungxe.vn/assets/images/icon/icon3-slide.png" alt="Icon 3">
             </div>
             <p class="text-gray-700">Đơn vị cho thuê xe sẽ trả phí giới thiệu khách hàng cho Car rental dựa trên các
                 giao dịch thành công (phí hoa hồng).</p>
