--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -199,30 +199,31 @@
 </section>
 
 <div class="grid grid-cols-4 gap-4 p-5">
-  <!-- Card 1 -->
-  <div class="border rounded-lg p-4 shadow-md">
-    <img
-      src="https://n1-pstg.mioto.vn/cho_thue_xe_o_to_tu_lai_thue_xe_du_lich_hanoi/mitsubishi_outlander_premium_2022/p/g/2024/03/09/01/UIAx1kVhaI1l2sWBLOZM_g.jpg"
-      alt="BENLY" class="w-full h-auto rounded-md mb-4">
-    <h2 class="text-lg font-bold">MITSUBISHI OUTLANDER</h2>
-    <p class="text-gray-500"><i class="fas fa-map-marker-alt"></i> Bình Thạnh, TP.HCM</p>
-    <div class="flex justify-between items-center my-2">
-      <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 450k</p>
-      <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 420k/4 giờ</p>
+  <a href="/productdetail">
+    <!-- Card 1 -->
+    <div class="border rounded-lg p-4 shadow-md">
+      <img
+        src="https://n1-pstg.mioto.vn/cho_thue_xe_o_to_tu_lai_thue_xe_du_lich_hanoi/mitsubishi_outlander_premium_2022/p/g/2024/03/09/01/UIAx1kVhaI1l2sWBLOZM_g.jpg"
+        alt="BENLY" class="w-full h-auto rounded-md mb-4">
+      <h2 class="text-lg font-bold">MITSUBISHI OUTLANDER</h2>
+      <p class="text-gray-500"><i class="fas fa-map-marker-alt"></i> Bình Thạnh, TP.HCM</p>
+      <div class="flex justify-between items-center my-2">
+        <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 450k</p>
+        <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 420k/4 giờ</p>
+      </div>
+      <div class="flex justify-between items-center my-2">
+        <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 950k</p>
+        <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 880k/24 giờ</p>
+      </div>
+      <div class="flex justify-between items-center my-2">
+        <p class="text-gray-500"><i class="fas fa-users"></i> 6 chỗ</p>
+        <p class="text-gray-500"><i class="fas fa-cogs"></i> Số tự động</p>
+      </div>
+      <button class="mt-4 bg-teal-600 text-white py-2 px-4 rounded hover:bg-teal-700" style="background-color: teal;">
+        <i class="fas fa-car"></i> THUÊ XE NGAY
+      </button>
     </div>
-    <div class="flex justify-between items-center my-2">
-      <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 950k</p>
-      <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 880k/24 giờ</p>
-    </div>
-    <div class="flex justify-between items-center my-2">
-      <p class="text-gray-500"><i class="fas fa-users"></i> 6 chỗ</p>
-      <p class="text-gray-500"><i class="fas fa-cogs"></i> Số tự động</p>
-    </div>
-    <button class="mt-4 bg-teal-600 text-white py-2 px-4 rounded hover:bg-teal-700" style="background-color: teal;">
-      <i class="fas fa-car"></i> THUÊ XE NGAY
-    </button>
-  </div>
-
+  </a>
   <!-- Card 2 -->
   <div class="border rounded-lg p-4 shadow-md">
     <img
@@ -320,28 +321,30 @@
   </div>
 
   <!-- Card 6 -->
-  <div class="border rounded-lg p-4 shadow-md">
-    <img
-      src="https://n1-pstg.mioto.vn/cho_thue_xe_o_to_tu_lai_thue_xe_du_lich_hanoi/mitsubishi_xpander_2024/p/g/2024/05/03/11/cxZ7Yv1UPY8Pbk2sbQrWWg.jpg"
-      alt="TOYOTA INNOVA 2017" class="w-full h-auto rounded-md mb-4">
-    <h2 class="text-lg font-bold">TOYOTA INNOVA 2017</h2>
-    <p class="text-gray-500"><i class="fas fa-map-marker-alt"></i> Quận Tân Phú, TP.HCM</p>
-    <div class="flex justify-between items-center my-2">
-      <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 600k</p>
-      <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 500k/4 giờ</p>
+  <a href="/productdetail">
+    <div class="border rounded-lg p-4 shadow-md">
+      <img
+        src="https://n1-pstg.mioto.vn/cho_thue_xe_o_to_tu_lai_thue_xe_du_lich_hanoi/mitsubishi_xpander_2024/p/g/2024/05/03/11/cxZ7Yv1UPY8Pbk2sbQrWWg.jpg"
+        alt="TOYOTA INNOVA 2017" class="w-full h-auto rounded-md mb-4">
+      <h2 class="text-lg font-bold">TOYOTA INNOVA 2017</h2>
+      <p class="text-gray-500"><i class="fas fa-map-marker-alt"></i> Quận Tân Phú, TP.HCM</p>
+      <div class="flex justify-between items-center my-2">
+        <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 600k</p>
+        <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 500k/4 giờ</p>
+      </div>
+      <div class="flex justify-between items-center my-2">
+        <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 1.200k</p>
+        <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 900k/24 giờ</p>
+      </div>
+      <div class="flex justify-between items-center my-2">
+        <p class="text-gray-500"><i class="fas fa-users"></i> 7 chỗ</p>
+        <p class="text-gray-500"><i class="fas fa-cogs"></i> Số tự động</p>
+      </div>
+      <button class="mt-4 bg-teal-600 text-white py-2 px-4 rounded hover:bg-teal-700" style="background-color: teal;">
+        <i class="fas fa-car"></i> THUÊ XE NGAY
+      </button>
     </div>
-    <div class="flex justify-between items-center my-2">
-      <p class="text-gray-500 line-through"><i class="fas fa-dollar-sign"></i> 1.200k</p>
-      <p class="text-teal-600 font-bold"><i class="fas fa-tag"></i> 900k/24 giờ</p>
-    </div>
-    <div class="flex justify-between items-center my-2">
-      <p class="text-gray-500"><i class="fas fa-users"></i> 7 chỗ</p>
-      <p class="text-gray-500"><i class="fas fa-cogs"></i> Số tự động</p>
-    </div>
-    <button class="mt-4 bg-teal-600 text-white py-2 px-4 rounded hover:bg-teal-700" style="background-color: teal;">
-      <i class="fas fa-car"></i> THUÊ XE NGAY
-    </button>
-  </div>
+  </a>
 
   <!-- Card 7 -->
   <div class="border rounded-lg p-4 shadow-md">
