--- a/Views/Home/ProductDetail.cshtml
+++ b/Views/Home/ProductDetail.cshtml
@@ -20,6 +20,11 @@
                 <span>Quận 3, Tp.HCM</span>
             </div>
         </div>
+        <!-- Thêm giá tiền -->
+        <div class="text-right justify-end">
+            <span class="line-through text-gray-500 text-lg">1.500.000₫</span>
+            <span class="text-red-500 text-xl font-bold ml-2">1.200.000₫</span>
+        </div>
         <button class="mt-4 lg:mt-0 bg-teal-600 text-white font-semibold py-2 px-4 rounded-md">Thuê xe ngay</button>
     </div>
 
@@ -253,8 +258,5 @@
             </div>
 
         </div>
-
-</html>
-
 
 </html>
